--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
 </head>
 <body class="p-6">
   <div class="flex flex-col items-center justify-center gap-3 mb-6">
-    <img src="https://i.postimg.cc/fbNmRxKv/moneyline-hacks-logo.png" alt="Moneyline Hacks Logo" class="h-16" />
+    <img
+  src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/d478543c4b8422be9e0cfd38a01b5b5aeb151006/ai-ml-predictive-models/assets/img/mlh/mlh-logo-1.jpg"
+  alt="Moneyline Hacks Logo"
+  class="h-16"
+
     <h1 class="text-4xl font-extrabold title-highlight">Moneyline Hacks</h1>
     <h2 class="text-xl text-gray-400">Run First Inning (RFI) Model — May 29</h2>
-    <img src="https://i.postimg.cc/DwWzBtj0/baseball-icon.png" alt="Baseball Icon" class="h-10" />
+    <img src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/d478543c4b8422be9e0cfd38a01b5b5aeb151006/ai-ml-predictive-models/assets/img/mlb/mlb-logo-1.png" alt="Baseball Icon" class="h-10" />
   </div>
 
   <div class="bg-gray-800 max-w-5xl mx-auto overflow-x-auto rounded-lg shadow-xl">
