--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <h1 class="text-4xl font-extrabold title-highlight">Moneyline Hacks</h1>
     <h2 class="text-xl text-gray-400">Run First Inning (RFI) Model — May 29</h2>
-    <img src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/d478543c4b8422be9e0cfd38a01b5b5aeb151006/ai-ml-predictive-models/assets/img/mlb/mlb-logo-1.png" alt="Baseball Icon" class="h-10" />
+    <img src="https://github.com/Fluidity1337/ai-ml-predictive-models/blob/main/ai-ml-predictive-models/assets/img/mlb/mlb-logo-2.png">" alt="Baseball Icon" class="h-10" />
   </div>
 
   <div class="bg-gray-800 max-w-5xl mx-auto overflow-x-auto rounded-lg shadow-xl">
