--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
   class="h-16" />
 
     <h1 class="text-4xl font-extrabold title-highlight">Moneyline Hacks</h1>
-    <h2 class="text-xl text-gray-400">Run First Inning (RFI) Model — May 29</h2>
-    <img src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/d478543c4b8422be9e0cfd38a01b5b5aeb151006/ai-ml-predictive-models/assets/img/mlb/mlb-logo-2.png" alt="Baseball Icon" class="h-10" />
+    <h2 class="text-xl text-gray-400">Run First Inning (RFI) Model — June 10</h2>
+    <img
+  src="data:image/png;base64,0QLHTuCE5QAe5/OlY17lAiuBjfCZ3QU2bxkw7aflAgKNkAABEAABFIJHD1+hnqOf...1lZWtnENBEAABEAABEAABIQhwEUNq6WyC+j/ATrAlSF3bvJ5AAAAAElFTkSuQmCC"
+  alt="Baseball Icon"
+  class="h-10"
+/>
+
   </div>
 
   <div class="bg-gray-800 max-w-5xl mx-auto overflow-x-auto rounded-lg shadow-xl">
