--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 <body class="p-6">
   <div class="flex flex-col items-center justify-center gap-3 mb-6">
     <img
-  src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/d478543c4b8422be9e0cfd38a01b5b5aeb151006/ai-ml-predictive-models/assets/img/mlh/mlh-logo-1.jpg"
+  src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/main/ai-ml-predictive-models/assets/img/mlh/mlh-logo-1.jpg"
   alt="Moneyline Hacks Logo"
   class="h-16" />
 
     <h1 class="text-4xl font-extrabold title-highlight">Moneyline Hacks</h1>
     <h2 class="text-xl text-gray-400">Run First Inning (RFI) Model — June 10</h2>
     <img
-  src="data:image/png;base64,0QLHTuCE5QAe5/OlY17lAiuBjfCZ3QU2bxkw7aflAgKNkAABEAABFIJHD1+hnqOf...1lZWtnENBEAABEAABEAABIQhwEUNq6WyC+j/ATrAlSF3bvJ5AAAAAElFTkSuQmCC"
+  src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/main/ai-ml-predictive-models/assets/img/mlb/mlb-logo-2.png"
   alt="Baseball Icon"
   class="h-10"
 />
