--- a/ai-ml-predictive-models/data/sports/baseball/mlb/raw/rfi_daily_model.html
+++ b/ai-ml-predictive-models/data/sports/baseball/mlb/raw/rfi_daily_model.html
@@ -14,7 +14,7 @@
   <div class="flex flex-col items-center justify-center gap-3 mb-6">
     <img src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/main/ai-ml-predictive-models/assets/img/mlh/mlh-logo-1.jpg" alt="Moneyline Hacks Logo" class="h-16" />
     <h1 class="text-4xl font-extrabold title-highlight">Moneyline Hacks</h1>
-    <h2 class="text-xl text-gray-400">Run First Inning (RFI) Model ï¿½ June 09</h2>
+    <h2 class="text-xl text-gray-400">Run First Inning (RFI) Model — June 09</h2>
     <img src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/main/ai-ml-predictive-models/assets/img/mlb/mlb-logo-2.png" alt="Baseball Icon" class="h-10" />
   </div>
   <div class="bg-gray-800 max-w-5xl mx-auto overflow-x-auto rounded-lg shadow-xl">
@@ -34,163 +34,163 @@
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Cincinnati Reds</td>
   <td class="px-4 py-3">22:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Cleveland Guardians</td>
   <td class="px-4 py-3">22:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Miami Marlins</td>
   <td class="px-4 py-3">22:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Pittsburgh Pirates</td>
   <td class="px-4 py-3">22:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Chicago Cubs</td>
   <td class="px-4 py-3">22:45</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Philadelphia Phillies</td>
   <td class="px-4 py-3">22:45</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Tampa Bay Rays</td>
   <td class="px-4 py-3">23:10</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Boston Red Sox</td>
   <td class="px-4 py-3">23:10</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Atlanta Braves</td>
   <td class="px-4 py-3">23:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Milwaukee Brewers</td>
   <td class="px-4 py-3">23:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Toronto Blue Jays</td>
   <td class="px-4 py-3">23:45</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">St. Louis Cardinals</td>
   <td class="px-4 py-3">23:45</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Athletics</td>
   <td class="px-4 py-3">01:38</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Los Angeles Angels</td>
   <td class="px-4 py-3">01:38</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Los Angeles Dodgers</td>
   <td class="px-4 py-3">01:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">San Diego Padres</td>
   <td class="px-4 py-3">01:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Seattle Mariners</td>
   <td class="px-4 py-3">01:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 <tr class="hover:bg-gray-700 border-b border-gray-700">
   <td class="px-4 py-3">Arizona Diamondbacks</td>
   <td class="px-4 py-3">01:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
+  <td class="px-4 py-3">-</td>
 </tr>
 </tbody></table></div></body></html>
