--- a/ai-ml-predictive-models/index2.html
+++ b/ai-ml-predictive-models/index2.html
@@ -14,7 +14,7 @@
   <div class="flex flex-col items-center justify-center gap-3 mb-6">
     <img src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/main/ai-ml-predictive-models/assets/img/mlh/mlh-logo-1.jpg" alt="Moneyline Hacks Logo" class="h-16" />
     <h1 class="text-4xl font-extrabold title-highlight">Moneyline Hacks</h1>
-    <h2 class="text-xl text-gray-400">Run First Inning (RFI) Model ï¿½ June 09</h2>
+    <h2 class="text-xl text-gray-400">Run First Inning (RFI) Model — June 09</h2>
     <img src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/main/ai-ml-predictive-models/assets/img/mlb/mlb-logo-2.png" alt="Baseball Icon" class="h-10" />
   </div>
   <div class="bg-gray-800 max-w-5xl mx-auto overflow-x-auto rounded-lg shadow-xl">
