--- a/index.html
+++ b/index.html
@@ -12,185 +12,53 @@
 </head>
 <body class="p-6">
   <div class="flex flex-col items-center justify-center gap-3 mb-6">
-    <img src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/main/ai-ml-predictive-models/assets/img/mlh/mlh-logo-1.jpg" alt="Moneyline Hacks Logo" class="h-16" />
+    <img src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/main/assets/img/mlh/mlh-logo-1.jpg" alt="Moneyline Hacks Logo" class="h-16" />
     <h1 class="text-4xl font-extrabold title-highlight">Moneyline Hacks</h1>
-    <h2 class="text-xl text-gray-400">Run First Inning (RFI) Model ï¿½ June 09</h2>
-    <img src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/main/ai-ml-predictive-models/assets/img/mlb/mlb-logo-2.png" alt="Baseball Icon" class="h-10" />
+    <h2 class="text-xl text-gray-400">Run First Inning (RFI) Model — June 11</h2>
+    <img src="https://raw.githubusercontent.com/Fluidity1337/ai-ml-predictive-models/main/assets/img/mlb/mlb-logo-2.png" alt="Baseball Icon" class="h-10" />
   </div>
   <div class="bg-gray-800 max-w-5xl mx-auto overflow-x-auto rounded-lg shadow-xl">
     <table class="min-w-full text-sm text-left text-gray-300">
-      <thead class="bg-gray-700 text-gray-300 text-sm uppercase">
+        <thead class="bg-gray-700 text-gray-300 text-sm uppercase">
         <tr>
-          <th class="px-4 py-3">Matchup</th>
-          <th class="px-4 py-3">Start Time</th>
-          <th class="px-4 py-3">ERA</th>
-          <th class="px-4 py-3">WHIP</th>
-          <th class="px-4 py-3">K/9</th>
-          <th class="px-4 py-3">BB/9</th>
-          <th class="px-4 py-3">1st Inning ERA</th>
+            <th class="px-4 py-3">Pitching Team</th>
+            <th class="px-4 py-3">Proj. Pitcher</th>
+            <th class="px-4 py-3">25 NRFI Record</th>
+            <th class="px-4 py-3">Streak</th>
+            <th class="px-4 py-3">Opponent</th>
+            <th class="px-4 py-3">Opp. NRFI Record</th>
+            <th class="px-4 py-3">Opponent Streak</th>
         </tr>
-      </thead>
+        </thead>
       <tbody>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Cincinnati Reds</td>
-  <td class="px-4 py-3">22:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Cleveland Guardians</td>
-  <td class="px-4 py-3">22:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Miami Marlins</td>
-  <td class="px-4 py-3">22:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Pittsburgh Pirates</td>
-  <td class="px-4 py-3">22:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Chicago Cubs</td>
-  <td class="px-4 py-3">22:45</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Philadelphia Phillies</td>
-  <td class="px-4 py-3">22:45</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Tampa Bay Rays</td>
-  <td class="px-4 py-3">23:10</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Boston Red Sox</td>
-  <td class="px-4 py-3">23:10</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Atlanta Braves</td>
-  <td class="px-4 py-3">23:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Milwaukee Brewers</td>
-  <td class="px-4 py-3">23:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Toronto Blue Jays</td>
-  <td class="px-4 py-3">23:45</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">St. Louis Cardinals</td>
-  <td class="px-4 py-3">23:45</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Athletics</td>
-  <td class="px-4 py-3">01:38</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Los Angeles Angels</td>
-  <td class="px-4 py-3">01:38</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Los Angeles Dodgers</td>
-  <td class="px-4 py-3">01:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">San Diego Padres</td>
-  <td class="px-4 py-3">01:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Seattle Mariners</td>
-  <td class="px-4 py-3">01:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
-<tr class="hover:bg-gray-700 border-b border-gray-700">
-  <td class="px-4 py-3">Arizona Diamondbacks</td>
-  <td class="px-4 py-3">01:40</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-  <td class="px-4 py-3">None</td>
-</tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Miami Marlins</td><td class='px-4 py-3'>Cal Quantrill</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Pittsburgh Pirates</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Pittsburgh Pirates</td><td class='px-4 py-3'>Bailey Falter</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Miami Marlins</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Chicago Cubs</td><td class='px-4 py-3'>Ben Brown</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Philadelphia Phillies</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Philadelphia Phillies</td><td class='px-4 py-3'>Jesús Luzardo</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Chicago Cubs</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Cincinnati Reds</td><td class='px-4 py-3'>Nick Lodolo</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Cleveland Guardians</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Cleveland Guardians</td><td class='px-4 py-3'>Logan Allen</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Cincinnati Reds</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Atlanta Braves</td><td class='px-4 py-3'>Spencer Schwellenbach</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Milwaukee Brewers</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Milwaukee Brewers</td><td class='px-4 py-3'>Chad Patrick</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Atlanta Braves</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Toronto Blue Jays</td><td class='px-4 py-3'>Eric Lauer</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>St. Louis Cardinals</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>St. Louis Cardinals</td><td class='px-4 py-3'>Matthew Liberatore</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Toronto Blue Jays</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Seattle Mariners</td><td class='px-4 py-3'>Bryan Woo</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Arizona Diamondbacks</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Arizona Diamondbacks</td><td class='px-4 py-3'>Eduardo Rodriguez</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Seattle Mariners</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Athletics</td><td class='px-4 py-3'>JP Sears</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Los Angeles Angels</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Los Angeles Angels</td><td class='px-4 py-3'>Kyle Hendricks</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Athletics</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Los Angeles Dodgers</td><td class='px-4 py-3'>Justin Wrobleski</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>San Diego Padres</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>San Diego Padres</td><td class='px-4 py-3'>Randy Vásquez</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Los Angeles Dodgers</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Detroit Tigers</td><td class='px-4 py-3'>Casey Mize</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Baltimore Orioles</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Baltimore Orioles</td><td class='px-4 py-3'>Zach Eflin</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Detroit Tigers</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Washington Nationals</td><td class='px-4 py-3'>Jake Irvin</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>New York Mets</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>New York Mets</td><td class='px-4 py-3'>David Peterson</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Washington Nationals</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Tampa Bay Rays</td><td class='px-4 py-3'>Zack Littell</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Boston Red Sox</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Boston Red Sox</td><td class='px-4 py-3'>Walker Buehler</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Tampa Bay Rays</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Texas Rangers</td><td class='px-4 py-3'>Jack Leiter</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Minnesota Twins</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Minnesota Twins</td><td class='px-4 py-3'>David Festa</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Texas Rangers</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>New York Yankees</td><td class='px-4 py-3'>Clarke Schmidt</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Kansas City Royals</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Kansas City Royals</td><td class='px-4 py-3'>Kris Bubic</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>New York Yankees</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Chicago White Sox</td><td class='px-4 py-3'>Sean Burke</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Houston Astros</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Houston Astros</td><td class='px-4 py-3'>Ryan Gusto</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Chicago White Sox</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+</tbody></table></div></body></html><tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>San Francisco Giants</td><td class='px-4 py-3'>Robbie Ray</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>Colorado Rockies</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
+<tr class='hover:bg-gray-700 border-b border-gray-700'><td class='px-4 py-3'>Colorado Rockies</td><td class='px-4 py-3'>Kyle Freeland</td><td class='px-4 py-3'>12-13</td><td class='px-4 py-3 text-green-400'>+3</td><td class='px-4 py-3'>San Francisco Giants</td><td class='px-4 py-3'>14-11</td><td class='px-4 py-3 text-red-400'>-1</td></tr>
 </tbody></table></div></body></html>
